Add a PluginConfig plugin (UI to manage other plugins)
This adds a global plugin called "PluginConfig" which can be used to easily
manage which plugins are enabled/disabled for the Ginga reference viewer.
Additionally, it allows the user to configure how the plugins appear under
the menus.

Documentation has been added to the manual.

--- a/ginga/examples/configs/general.cfg
+++ b/ginga/examples/configs/general.cfg
@@ -143,12 +143,13 @@ channel_prefix = "Image"
 # temp directory (as defined by Python's 'tempfile' module)
 #download_folder = None
 
-# Name of a layout file to configure the GUI
-layout_file = 'layout.json'
-
 # Name of a file to configure the set of available plugins and where they
 # should appear
-plugin_file = 'plugins.json'
+plugin_file = 'plugins.yml'
+
+# Name of a file to configure the set of available loaders and which has
+# priority
+loader_file = 'loaders.yml'
 
 # Confirm program exits with a dialog?
 confirm_shutdown = True
