--- a/setup.cfg
+++ b/setup.cfg
@@ -51,6 +51,7 @@ install_requires =
     qtpy>=2.0.1
     astropy>=5.0
     pillow>=9.2
+    pyyaml>=6.0
     tomli>=2.0.1; python_full_version < '3.11.0a7'
     python-dateutil>=2.8.2
 setup_requires = setuptools_scm
