--- a/setup.cfg
+++ b/setup.cfg
@@ -63,6 +63,7 @@ recommended =
     exifread>=2.3.2
     beautifulsoup4>=4.3.2
     astroquery>=0.3.5
+    python-dateutil>=2.8.2
     docutils
     photutils
 test =
