--- a/setup.cfg
+++ b/setup.cfg
@@ -52,6 +52,7 @@ install_requires =
     astropy>=5.0
     pillow>=9.2
     tomli>=2.0.1; python_full_version < '3.11.0a7'
+    python-dateutil>=2.8.2
 setup_requires = setuptools_scm
 
 [options.extras_require]
