--- a/ginga/examples/layouts/twofer/general.cfg
+++ b/ginga/examples/layouts/twofer/general.cfg
@@ -11,11 +11,11 @@ inherit_primary_header = False
 layout_file = 'layout.json'
 numImages = 10
 pixel_coords_offset = 1.0
-plugin_file = 'plugins.json'
+plugin_file = 'plugins.yml'
 recursion_limit = 2000
 sansFont = None
 save_layout = False
-scrollbars = 'off'
+scrollbars = 'on'
 serifFont = None
 showBanner = False
 useMatplotlibColormaps = False
