--- a/ginga/examples/layouts/standard/bindings.cfg
+++ b/ginga/examples/layouts/standard/bindings.cfg
@@ -56,7 +56,7 @@ dmod_dist = ['__d', None, None]
 dmod_contrast = ['__t', None, None]
 dmod_rotate = ['__r', None, None]
 dmod_pan = ['__q', None, 'pan']
-dmod_freepan = ['__w', None, 'pan']
+dmod_zoom = ['__w', None, 'pan']
 dmod_camera = ['__c', None, 'pan']
 dmod_naxis = ['__n', None, None]
 
@@ -68,31 +68,33 @@ kp_zoom_in = ['+', '=']
 kp_zoom_out = ['-', '_']
 kp_zoom = ['1', '2', '3', '4', '5', '6', '7', '8', '9', '0']
 kp_zoom_inv = ['!', '@', '#', '$', '%', '^', '&', '*', '(', ')']
-kp_zoom_fit = ['backquote', 'pan+backquote', 'freepan+backquote']
+kp_zoom_fit = ['backquote', 'pan+backquote', 'zoom+backquote']
 kp_autozoom_toggle = ['doublequote', 'pan+doublequote']
 kp_autozoom_override = ['singlequote', 'pan+singlequote']
 kp_dist_reset = ['D', 'dist+D']
 kp_dist_prev = ['dist+up', 'dist+b']
 kp_dist_next = ['dist+down', 'dist+n']
-kp_pan_set = ['p', 'pan+p', 'freepan+p']
-kp_pan_zoom_set = ['pan+1', 'freepan+1']
-kp_pan_zoom_save = ['pan+z', 'freepan+z']
-kp_pan_left = ['pan+*+left', 'freepan+*+left']
-kp_pan_right = ['pan+*+right', 'freepan+*+right']
-kp_pan_up = ['pan+*+up', 'freepan+*+up']
-kp_pan_down = ['pan+*+down', 'freepan+*+down']
-kp_pan_home = ['pan+*+home', 'freepan+*+home']
-kp_pan_end = ['pan+*+end', 'freepan+*+end']
-kp_pan_page_up = ['pan+*+page_up', 'freepan+*+page_up']
-kp_pan_page_down = ['pan+*+page_down', 'freepan+*+page_down']
+kp_pan_set = ['p', 'pan+p', 'zoom+p']
+kp_pan_zoom_set = ['pan+1', 'zoom+1']
+kp_pan_zoom_save = ['pan+z', 'zoom+z']
+kp_pan_left = ['pan+*+left', 'zoom+*+left']
+kp_pan_right = ['pan+*+right', 'zoom+*+right']
+kp_pan_up = ['pan+*+up', 'zoom+*+up']
+kp_pan_down = ['pan+*+down', 'zoom+*+down']
+kp_pan_home = ['pan+*+home', 'zoom+*+home']
+kp_pan_end = ['pan+*+end', 'zoom+*+end']
+kp_pan_page_up = ['pan+*+page_up', 'zoom+*+page_up']
+kp_pan_page_down = ['pan+*+page_down', 'zoom+*+page_down']
 kp_pan_px_xminus = ['shift+left']
 kp_pan_px_xplus = ['shift+right']
 kp_pan_px_yminus = ['shift+down']
 kp_pan_px_yplus = ['shift+up']
 kp_pan_px_center = ['shift+home']
-kp_center = ['c', 'pan+c', 'freepan+c']
+kp_center = ['c', 'pan+c', 'zoom+c']
 kp_cut_255 = ['cuts+A']
 kp_cut_minmax = ['cuts+S']
+kp_cut_lo = ['cuts+l']
+kp_cut_hi = ['cuts+h']
 kp_cut_auto = ['a', 'cuts+a']
 kp_autocuts_alg_prev = ['cuts+up', 'cuts+b']
 kp_autocuts_alg_next = ['cuts+down', 'cuts+n']
@@ -138,10 +140,10 @@ key_pan_px_delta = 1.0
 sc_pan = ['ctrl+scroll']
 sc_pan_fine = ['pan+shift+scroll']
 sc_pan_coarse = ['pan+ctrl+scroll']
-sc_zoom = ['scroll', 'freepan+scroll']
+sc_zoom = ['scroll', 'zoom+scroll']
 sc_zoom_fine = []
 sc_zoom_coarse = []
-sc_zoom_origin = ['shift+scroll', 'freepan+shift+scroll']
+sc_zoom_origin = ['shift+scroll', 'zoom+shift+scroll']
 sc_cuts_fine = ['cuts+ctrl+scroll']
 sc_cuts_coarse = ['cuts+scroll']
 sc_cuts_alg = []
@@ -154,6 +156,9 @@ sc_naxis = ['naxis+scroll']
 # This controls how fast panning occurs with the sc_pan* functions.
 # Increase to speed up panning
 scroll_pan_acceleration = 1.0
+# Lock X or Y pan scrolling
+scroll_pan_lock_x = False
+scroll_pan_lock_y = False
 # For trackpads you can adjust this down if it seems too sensitive.
 # 1.0 is appropriate for a mouse, 0.1 for most trackpads
 scroll_zoom_acceleration = 1.0
@@ -177,9 +182,9 @@ ms_contrast = ['contrast+left', 'ctrl+right']
 ms_contrast_restore = ['contrast+right', 'ctrl+middle']
 ms_pan = ['pan+left', 'ctrl+left']
 ms_zoom = ['pan+right']
-ms_freepan = ['freepan+middle']
-ms_zoom_in = ['freepan+left']
-ms_zoom_out = ['freepan+right', 'freepan+ctrl+left']
+ms_freepan = ['zoom+middle']
+ms_zoom_in = ['zoom+left']
+ms_zoom_out = ['zoom+right', 'zoom+ctrl+left']
 ms_cutlo = ['cuts+shift+left']
 ms_cuthi = ['cuts+ctrl+left']
 ms_cutall = ['cuts+left']
@@ -201,8 +206,8 @@ mouse_rotate_acceleration = 0.75
 pi_zoom = ['pinch']
 pi_zoom_origin = ['shift+pinch']
 pa_pan = ['pan']
-pa_zoom = ['freepan+pan']
-pa_zoom_origin = ['freepan+shift+pan']
+pa_zoom = ['zoom+pan']
+pa_zoom_origin = ['zoom+shift+pan']
 pa_naxis = ['naxis+pan']
 
 # This controls what operations the pinch gesture controls.  Possibilities are
