--- a/ginga/examples/layouts/standard/general.cfg
+++ b/ginga/examples/layouts/standard/general.cfg
@@ -8,10 +8,10 @@ fixedFont = None
 font_scaling_factor = None
 icc_working_profile = None
 inherit_primary_header = False
-layout_file = 'layout'
+layout_file = 'layout.json'
 numImages = 10
 pixel_coords_offset = 1.0
-plugin_file = 'plugins.json'
+plugin_file = 'plugins.yml'
 recursion_limit = 2000
 sansFont = None
 save_layout = False
