Be able to configure thread pool in general.cfg

--- a/ginga/examples/configs/general.cfg
+++ b/ginga/examples/configs/general.cfg
@@ -153,3 +153,6 @@ loader_file = 'loaders.yml'
 
 # Confirm program exits with a dialog?
 confirm_shutdown = True
+
+# default size of thread pool
+num_threads = 4
