Update labeler rules syntax
[ci skip]

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,36 +1,48 @@
 documentation:
-  - .readthedocs.yml
-  - CITATION
-  - doc/**/*
-  - ginga/doc/*
-  - licenses/*
-  - '*.md'
-  - '*.txt'
-  - any: ['*.rst', '!CHANGES.rst']
+- changed-files:
+  - any-glob-to-any-file:
+    - .readthedocs.yml
+    - CITATION
+    - doc/**/*
+    - ginga/doc/*
+    - licenses/*
+    - '*.md'
+    - '*.txt'
+  - all-globs-to-any-file:
+    - '*.rst'
+    - '!CHANGES.rst'
 
 maintenance:
-  - .bandit.yaml
-  - .github/**/*
-  - .gitignore
-  - conftest.py
-  - MANIFEST.in
-  - pyproject.toml
-  - setup.*
+- changed-files:
+  - any-glob-to-any-file:
+    - .bandit.yaml
+    - .github/**/*
+    - .gitignore
+    - conftest.py
+    - MANIFEST.in
+    - pyproject.toml
+    - setup.*
 
 plugin:
-  - doc/manual/plugins.rst
-  - doc/manual/plugins_global/**/*
-  - doc/manual/plugins_local/**/*
-  - experimental/plugins/*
-  - ginga/rv/plugins/*
+- changed-files:
+  - any-glob-to-any-file:
+    - doc/manual/plugins.rst
+    - doc/manual/plugins_global/**/*
+    - doc/manual/plugins_local/**/*
+    - experimental/plugins/*
+    - ginga/rv/plugins/*
 
 reference viewer:
-  - ginga/rv/**/*
+- changed-files:
+  - any-glob-to-any-file:
+    - ginga/rv/**/*
 
 widget:
-  - doc/dev_manual/jupnotebooks.rst
-  - ginga/aggw/**/*
-  - ginga/gtk3w/**/*
-  - ginga/gw/**/*
-  - ginga/qtw/**/*
-  - ginga/web/**/*
+- changed-files:
+  - any-glob-to-any-file:
+    - doc/dev_manual/jupnotebooks.rst
+    - ginga/aggw/**/*
+    - ginga/gtk3w/**/*
+    - ginga/gw/**/*
+    - ginga/qtw/**/*
+    - ginga/web/**/*
