--- a/setup.cfg
+++ b/setup.cfg
@@ -55,6 +55,7 @@ install_requires =
     pillow>=9.2
     pyyaml>=6.0
     tomli>=2.0.1; python_full_version < '3.11.0a7'
+    packaging>=23.1
 setup_requires = setuptools_scm
 
 [options.extras_require]
