Initial work to support GTK4 as an official backend
- updated documentation

--- a/setup.cfg
+++ b/setup.cfg
@@ -62,7 +62,7 @@ setup_requires = setuptools_scm
 recommended =
     scipy>=0.18.1
     matplotlib>=3.8
-    opencv-python-headless>=4.5.4.58
+    opencv-python-headless>=4.5.4
     exifread>=2.3.2
     astroquery>=0.3.5
     python-dateutil>=2.8.2
@@ -79,6 +79,9 @@ docs =
     sphinx-astropy
     sphinx_rtd_theme
 gtk3 =
+    pycairo
+    pygobject>=3.48.1
+gtk4 =
     pycairo
     pygobject
 qt5 =
@@ -100,6 +103,7 @@ ginga = examples/*/*, examples/*/*/*, web/pgw/js/*.js, web/pgw/js/*.css
 ginga.doc = *.html
 ginga.fonts = */*.ttf, */*.txt
 ginga.gtk3w = gtk_css
+ginga.gtk4w = gtk_css
 ginga.icons = *.ppm, *.png, *.svg
 ginga.cursors = *.svg, *.toml
 ginga.opengl = glsl/*.vert, glsl/*.frag
