--- a/tox.ini
+++ b/tox.ini
@@ -48,15 +48,13 @@ deps =
     devdeps: matplotlib>=0.0.dev0
     devdeps: pyerfa>=0.0.dev0
     devdeps: astropy>=0.0.dev0
-    devdeps: git+https://github.com/astropy/photutils@main#egg=photutils
+    devdeps: photutils>=0.0.dev0
 
 extras =
     test
     qt5
 
 commands =
-    # Force numpy-dev after matplotlib downgrades it (https://github.com/matplotlib/matplotlib/issues/26847)
-    devdeps: python -m pip install --pre --upgrade --extra-index-url https://pypi.anaconda.org/scientific-python-nightly-wheels/simple numpy
     pip freeze
     pytest --pyargs ginga {toxinidir}/doc {posargs}
 
