--- a/setup.cfg
+++ b/setup.cfg
@@ -51,7 +51,7 @@ install_requires =
     numpy>=1.21
     qtpy>=2.0.1
     astropy>=5.0
-    puremagic>=1.23
+    puremagic==1.23
     pillow>=9.2
     pyyaml>=6.0
     tomli>=2.0.1; python_full_version < '3.11.0a7'
