Add background to onscreen message

--- a/setup.cfg
+++ b/setup.cfg
@@ -61,8 +61,8 @@ setup_requires = setuptools_scm
 [options.extras_require]
 recommended =
     scipy>=0.18.1
-    matplotlib>=3.4
-    opencv-python>=4.5.4.58
+    matplotlib>=3.8
+    opencv-python-headless>=4.5.4.58
     exifread>=2.3.2
     astroquery>=0.3.5
     python-dateutil>=2.8.2
