Pin PyQt5 stack in oldest deps
because PyQt5-sip started to fail there

--- a/tox.ini
+++ b/tox.ini
@@ -40,6 +40,8 @@ deps =
     oldestdeps: scipy==1.6.*
     oldestdeps: astropy==5.0.*
     oldestdeps: photutils==1.8.*
+    oldestdeps: PyQt5==5.15.11
+    oldestdeps: PyQt5-sip==12.15.0
 
     # The devdeps factor is intended to be used to install the latest developer version
     # or nightly wheel of key dependencies.
