Small wrap up of fixes and improvements
- Fixed an issue with editing objects in the Pick plugin
- Fixed an issue where image metadata not always loaded correctly with
  Pillow for RGB images
- Added support for Apple HEIF (.HEIC) RGB images if pillow-heif is installed

--- a/setup.cfg
+++ b/setup.cfg
@@ -64,6 +64,7 @@ recommended =
     matplotlib>=3.8
     opencv-python-headless>=4.5.4
     exifread>=2.3.2
+    pillow-heif>=0.21.0
     astroquery>=0.3.5
     python-dateutil>=2.8.2
     photutils
