Add F824 to flake8 ignores
-fix #1126

--- a/setup.cfg
+++ b/setup.cfg
@@ -159,7 +159,8 @@ directory = ginga/locale
 # I101: imported names are in the wrong order
 # W504: line break after binary operator
 # F841: local variable '%s' is assigned to but never used
-ignore = E129,E265,E266,E402,E501,E741,I100,I101,W504,F841
+# F824: global variable '%s' is never assigned in scope
+ignore = E129,E265,E266,E402,E501,E741,I100,I101,W504,F841,F824
 
 [coverage:run]
 source = ginga
