Refactor to use binding maps and modes for plot viewer
- added ability for viewers to skip registering modes that are not
  designed for them
- refactor viewers to have a base class for common methods
- plot viewer now has a mode called plot2d that has the logic for
  handling zooming and panning in plots

--- a/setup.cfg
+++ b/setup.cfg
@@ -125,6 +125,7 @@ ginga_modes =
     dist = ginga.modes.dist:DistMode
     camera = ginga.modes.camera:CameraMode
     naxis = ginga.modes.naxis:NaxisMode
+    plot2d = ginga.modes.plot2d:Plot2DMode
 
 ginga_loaders =
     pillow = ginga.util.io.io_rgb:PillowFileHandler
