Update Gtk requirements in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -77,11 +77,13 @@ docs =
     sphinx-astropy
     sphinx_rtd_theme
 gtk3 =
-    pycairo
-    pygobject>=3.48.1
+    gobject-introspection>=1.84.0
+    pycairo>=1.27.0
+    pygobject>=3.50.0
 gtk4 =
-    pycairo
-    pygobject
+    gobject-introspection>=1.84.0
+    pycairo>=1.29.0
+    pygobject>=3.54.5
 qt5 =
     PyQt5
 qt6 =
