Add cooldown period
for security

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,6 +11,8 @@ updates:
       actions:
         patterns:
           - "*"
+    cooldown:
+      default-days: 14
 
   - package-ecosystem: pip
     directory: "/"
@@ -22,3 +24,5 @@ updates:
       actions:
         patterns:
           - "*"
+    cooldown:
+      default-days: 14
