Provide a setting to disallow nonsingletons for plugins that support it
In general.cfg, you can set the value pluginmgr_allow_nonsingletons to
True or False (default is True)

--- a/ginga/examples/configs/general.cfg
+++ b/ginga/examples/configs/general.cfg
@@ -156,3 +156,7 @@ confirm_shutdown = True
 
 # default size of thread pool
 num_threads = 4
+
+# allow non-singletons in plugins that support them?
+# (ability to start more than one per channel)
+pluginmgr_allow_nonsingletons = True
